--- a/orange.html
+++ b/orange.html
@@ -14,31 +14,33 @@
 
 <div class="header">
     <div class="filters-container">
-        <button type="button" id="ethic">ethical</button> 
-        <button type="button" id="unethic">unethical</button> 
+        <div class="filters-1"> <button type="button" id="ethic">ethical</button> </div>
+            <div class="filters-1"> <button type="button" id="unethic">unethical</button> </div>
         </div>
+    </div>
 </div>
    
 <div class="main_fruit">
     <div class="fruit_old">
         <div class="airtable-item filter-hide" data-ethic="ethical" id="ethicParent"> 
         </div>
-        <img src="stickers/apple.webp" width="450"> 
+        <img src="stickers/orange.webp" width="450"> 
     </div>
 
     <div class="fruit_old">
         <div class="airtable-item filter-hide" data-ethic="unethical" id="unethicParent"> 
         </div>
-        <img src="stickers/apple_old.png" width="450">
+        <img src="stickers/rotten-oraneg.jpg" width="450">
     </div>
 </div>
 
 
 <div class="fruit_corusel">
     <div class="fruit_corusel_item"><a href="fruit_detail.html"> <img src="stickers/banana.png"></a></div>
-    <div class="fruit_corusel_item"><a href="avocado.html"><img src="stickers/avocado.png"></a></div>
-    <div class="fruit_corusel_item"><a href="watermelon.html"><img src="stickers/watermelon.png"></a></div>
+    <div class="fruit_corusel_item"><a href="orange.html"><img src="stickers/avocado.png"></a></div>
+    <div class="fruit_corusel_item"><a href="fruit_detail.html"><img src="stickers/1-2-aubergine-png.png"></a></div>
     <div class="fruit_corusel_item"><a href="fruit_detail.html"><img src="stickers/strawberry.png"></a></div>
+    <div class="fruit_corusel_item"><a href="fruit_detail.html"><img src="stickers/1-2-aubergine-png.png"></a></div>
     <div class="fruit_corusel_item"><a href="orange.html"><img src="stickers/orange.webp"></a></div>
 </div>
 
