--- a/apple.html
+++ b/apple.html
@@ -19,6 +19,7 @@
         </div>
 </div>
    
+<div class="encase">
 <div class="main_fruit">
     <div class="fruit_old">
         <div class="airtable-item filter-hide" data-ethic="ethical" id="ethicParent">
@@ -42,6 +43,7 @@
     </div>
 </div>
 
+</div>
 
 
 
