--- a/banana.html
+++ b/banana.html
@@ -24,20 +24,20 @@
     <div class="fruit_old">
         <div class="airtable-item filter-hide" data-ethic="ethical" id="ethicParent">
         </div>
-        <img src="stickers/watermelon.png" width="450"> 
+        <img src="stickers/banana.png" width="450"> 
     </div>
 
     <div class="fruit_old">
         <div class="airtable-item filter-hide" data-ethic="unethical" id="unethicParent"> 
         </div>
-        <img src="stickers/WatermelonRotten_2048.webp" width="450">
+        <img src="stickers/banana-overly-ripe.webp" width="450">
     </div>
 
 
     <div class="fruit_corusel">
         <div class="fruit_corusel_item"><a href="fruit_detail.html"> <img src="stickers/banana.png"></a></div>
         <div class="fruit_corusel_item"><a href="avocado.html"><img src="stickers/avocado.png"></a></div>
-        <div class="fruit_corusel_item"><a href="apple.html"><img src="stickers/watermelon.png"></a></div>
+        <div class="fruit_corusel_item"><a href="watermelon.html"><img src="stickers/watermelon.png"></a></div>
         <div class="fruit_corusel_item"><a href="fruit_detail.html"><img src="stickers/strawberry.png"></a></div>
         <div class="fruit_corusel_item"><a href="orange.html"><img src="stickers/orange.webp"></a></div>
     </div>
