--- a/orange.html
+++ b/orange.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style_detail.css">
     <script type="text/javascript" src="./airtable.browser.js"></script>    
 </head>
-<body>
+<body style="background-color: #FFB25E";>
 
 <div class="header">
     <div class="filters-container">
