--- a/strawberry.html
+++ b/strawberry.html
@@ -35,10 +35,10 @@
 
 
     <div class="fruit_corusel">
-        <div class="fruit_corusel_item"><a href="fruit_detail.html"> <img src="stickers/banana.png"></a></div>
+        <div class="fruit_corusel_item"><a href="banana.html"> <img src="stickers/banana.png"></a></div>
         <div class="fruit_corusel_item"><a href="avocado.html"><img src="stickers/avocado.png"></a></div>
         <div class="fruit_corusel_item"><a href="watermelon.html"><img src="stickers/watermelon.png"></a></div>
-        <div class="fruit_corusel_item"><a href="fruit_detail.html"><img src="stickers/apple.webp"></a></div>
+        <div class="fruit_corusel_item"><a href="apple.html"><img src="stickers/apple.webp"></a></div>
         <div class="fruit_corusel_item"><a href="orange.html"><img src="stickers/orange.webp"></a></div>
     </div>
 </div>
