--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <div class="main">
         <div class="fruit-bowl">
             <div class="bowl">
-                <div class="fruit-1"><a href="fruit_detail.html"> <img src="stickers/banana.png"></a></div>
-                <div class="fruit-2"><a href="fruit_detail.html"><img src="stickers/avocado.png"></a></div>
-                <div class="fruit-3"><a href="fruit_detail.html"><img src="stickers/watermelon.png"></a></div>
-                <div class="fruit-4"><a href="fruit_detail.html"><img src="stickers/strawberry.png"></a></div>
-                <div class="fruit-5"><a href="fruit_detail.html"><img src="stickers/apple.webp"></a></div>
-                <div class="fruit-6"><a href="fruit_detail.html"><img src="stickers/orange.webp"></a></div>
+                <div class="fruit-1"><a href="banana.html"> <img src="stickers/banana.png"></a></div>
+                <div class="fruit-2"><a href="avocado.html"><img src="stickers/avocado.png"></a></div>
+                <div class="fruit-3"><a href="watermelon.html"><img src="stickers/watermelon.png"></a></div>
+                <div class="fruit-4"><a href="strawberry.html"><img src="stickers/strawberry.png"></a></div>
+                <div class="fruit-5"><a href="apple.html"><img src="stickers/apple.webp"></a></div>
+                <div class="fruit-6"><a href="orange.html"><img src="stickers/orange.webp"></a></div>
             </div>
             <img src="./stickers/basket.png">
         </div>
