--- a/orange.html
+++ b/orange.html
@@ -30,7 +30,7 @@
     <div class="fruit_old">
         <div class="airtable-item filter-hide" data-ethic="unethical" id="unethicParent"> 
         </div>
-        <img src="stickers/rotten-oraneg.jpg" width="450">
+        <img src="stickers/rotten-oraneg.png" width="450">
     </div>
 
 
